<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E0ECF4"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bing2013.draft2_linear_acceleration.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/startButton"
        android:layout_above="@+id/curbButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/gpsNetButton"
        android:layout_alignEnd="@+id/gpsNetButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/stopButton"
        android:layout_toRightOf="@+id/saveButton"
        android:layout_alignTop="@+id/saveButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/curbButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:background="#8854A7"
        android:text="@string/crubCut"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps_amp_network"
        android:id="@+id/gpsNetButton"
        android:layout_above="@+id/startButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gps"
        android:id="@+id/gpsButton"
        android:layout_below="@+id/crossButton"
        android:layout_toRightOf="@+id/saveButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/saveButton"
        android:layout_alignBaseline="@+id/startButton"
        android:layout_alignBottom="@+id/startButton"
        android:layout_toRightOf="@+id/startButton"
        android:layout_toEndOf="@+id/startButton" />

    <Button
        android:id="@+id/crossButton"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:background="#9EBCDA"
        android:text="@string/crossing"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/gpsNetButton" />

</RelativeLayout>
